<resources>
    <string name="app_name">FeedMe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawer" translatable="false">open_drawer</string>
    <string name="closeDrawer" translatable="false">close_drawer</string>
    <string name="search_hint">search feedMeArticles/sites</string>
    <string name="search">Search</string>
    <string name="top_sites_head_title">My Sites</string>
    <string name="fav_sites_head_title">Favorites</string>
    <string name="categories_head_title">Categories</string>
    <string name="saved_posts_head_title">Saved</string>
    <string name="pref_last_update_key" translatable="false">last_update</string>
    <string name="pref_interval_val_key" translatable="false">interval_val</string>
    <string name="pref_initialized_key" translatable="false">initialized</string>
    <string name="article_options_description">Article Options</string>
    <string name="article_img_description">Article Image</string>
    <string name="title_val_on_btn">Title</string>
    <string name="snippet_val_btn">Snippet</string>
    <string name="refresh_news">Refresh News</string>
    <string name="settings">Settings</string>
    <string name="item_delete">Delete</string>
    <string name="item_snippet">Snippet</string>
    <string name="item_bookmark">Bookmark</string>
    <string name="item_save">Save</string>
    <string name="dots_item" translatable="false">⋮</string>
    <string name="action_share">Share Article</string>
    <string name="extract_api_key" translatable="false">bb23317a91408f9c117d0212e9c68109</string>
    <string name="extract_api_id" translatable="false">e7a2ec9b</string>
    <!-- <string name="googl_api_key">AIzaSyA5nKr9yDKhGiWvOPP55PbOapgdZDsXiPE</string>-->
    <string name="googl_api_id" translatable="false">005243230011887027180:95rpocypqje</string>
    <string name="googl_api_key" translatable="false">AIzaSyCBpYjocDnbupnAxbK6XqN5D-mrohReaIU</string>
    <string name="not_available">Content is not available check your internet or choose Open Browser action to surf in browser</string>
    <string name="open_browser">Open Browser</string>
    <string name="item_browser">Open Browser</string>
    <string name="item_mark_read">Mark as Read</string>
    <string name="by_unknown">By UnKnown</string>
    <string name="error_loading_article_Img">Error Loading Article</string>
    <string name="add_new_category">Add New Category</string>
    <string name="verify_rss_link">Verifying…</string>
    <string name="item_edit">Edit</string>
    <string name="item_site_delete">Delete</string>
    <string name="item_site_open">Open</string>
    <string name="title_error_msg">Please Enter Title</string>
    <string name="site_already_exist">This site already exist</string>
    <string name="category_title_edittext">Category Title</string>
    <string name="cat_empty_title">Category Title Can\'t be empty</string>
    <string name="add_btn_title">Add</string>
    <string name="edit_btn_title">Edit</string>
    <string name="saved_activity_title">Saved Articles</string>
    <string name="bookmark_activity_title">Bookmarks</string>
    <string name="snippet_btn_title">Snippet</string>
    <string name="delete_category_msg">Deleting this category will delete all sites in it and all articles in these sites</string>
    <string name="delete_category_title">Delete Category</string>
    <string name="delete_category_pos_btn">Delete Any Way</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="edit_category_title">Edit Category</string>
    <string name="edit_category_pos_btn">Edit</string>
    <string name="add_category_title">Add Category</string>
    <string name="add_btn_text">Add</string>
    <string name="sign_in_text">To continue using the application please sign in</string>
    <string name="auth_fail">Authentication failed check your internet</string>
    <string name="is_synced_pref_key" translatable="false">IS_SYNCED</string>
    <string name="unable_to_sync">Synchronization failed Please Try Again Later</string>
    <string name="slow_fetching">Fetching Articles Takes Too Long … Check Your Internet</string>

    <string name="title_activity_error">ErrorActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">There is A Connection Problem</string>
    <string name="pref_cleanup_val_key">cleanup_val</string>
    <string name="pref_backup_val_key" translatable="false">back_up</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_update_frequency">Update News frequency</string>
    <string-array name="pref_update_frequency_titles">
        <item>On Application Open</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hour</item>
        <item>24 hours</item>
        <item>2 days</item>
        <item>4 days</item>
        <item>7 days</item>
        <item>never</item>
    </string-array>
    <string-array name="pref_update_frequency_values">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
        <item>48</item>
        <item>96</item>
        <item>168</item>
        <item>999999999</item>
    </string-array>
    <string-array name="pref_backup_frequency_titles">
        <item>On Application Open</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>4 days</item>
        <item>7 days</item>
        <item>never</item>
    </string-array>
    <string-array name="pref_backup_frequency_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>7</item>
        <item>999999999</item>
    </string-array>
    <string-array name="pref_cleanup_frequency_titles">
        <item>1 day</item>
        <item>2 days</item>
        <item>4 days</item>
        <item>7 days</item>
        <item>never</item>
    </string-array>
    <string-array name="pref_cleanup_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>7</item>
        <item>999999999</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_title_backup_frequency">Backup &amp; Frequency</string>
    <string name="pref_title_clean_frequency">Outdated</string>
    <string name="pref_summary_clean_frequency">This option let you choose when article is considered outdated and eligible to be deleted from database</string>
    <string name="sync_list_freq_key" translatable="false">sync_freq_key</string>
    <string name="backup_list_freq_key" translatable="false">backup_freq_key</string>
    <string name="cleanup_list_freq_key" translatable="false">cleanup_list_freq_key</string>
    <string name="firebase_api_key" translatable="false">677711228584-ln28fjr02q6o176top29ck7nknr0v6cg.apps.googleusercontent.com</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="all_articles_string">All articles</string>
    <string name="close_btn_text">Close</string>
    <string name="add_sites_title">Add Sites</string>
    <string name="edit_nav_cat_item">Edit</string>
    <string name="site_options">Item Options</string>
    <string name="action_close_dialog">close dialog</string>
    <string name="article_deleted_msg">Article has been deleted</string>
    <string name="article_saved_msg">Article has been saved</string>
    <string name="no_internet">No Internet Available Check Internet</string>
    <string name="update_made_msg">Updates has been made..</string>
    <string name="logo_description">FeedMe Logo</string>
    <string name="untitled_holder">UnTitled</string>
    <string name="unknown_holder">By unknown</string>
    <string name="site_title_field_hint">Site Title</string>
    <string name="rss_url_field_hint">Feeds Url</string>
    <string name="empty_articles_view_description">No Articles Availabe</string>
    <string name="no_subscriptions_view_description">No subscriptions exist</string>
    <string name="profile_img_description">Profile Image</string>
    <string name="delete_category_description">Delete category</string>
    <string name="site_image_description">Site Logo</string>
    <string name="syncing">Syncing…</string>
    <string name="fetching_articles">Fetching Feeds…</string>
    <string name="login">Login…</string>
    <string name="pick_sites_title">Pick Sites</string>
    <string name="item_unbookmark">UnBookmark</string>
    <string name="item_unsave">UnArchive</string>
    <string name="fetching_article">Fetching Article…</string>
    <string name="backup_title">Backup</string>
    <string name="timeline">Timeline</string>
    <string name="mysites">My Sites</string>
    <string name="performing_backup">Performing Backup…</string>


</resources>
