<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="24"
        android:entries="@array/pref_update_frequency_titles"
        android:entryValues="@array/pref_update_frequency_values"
        android:key="@string/sync_list_freq_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_update_frequency" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_backup_frequency_titles"
        android:entryValues="@array/pref_backup_frequency_values"
        android:key="@string/backup_list_freq_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_backup_frequency" />
    <ListPreference
        android:defaultValue="7"
        android:entries="@array/pref_cleanup_frequency_titles"
        android:entryValues="@array/pref_cleanup_frequency_values"
        android:key="@string/cleanup_list_freq_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_summary_clean_frequency"
        android:title="@string/pref_title_clean_frequency" />


</PreferenceScreen>
