<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_save"
        app:showAsAction="ifRoom|withText"
        android:title="@string/item_save"
        android:visible="true"/>
    <item
        android:id="@+id/item_fav"
        app:showAsAction="ifRoom|withText"
        android:title="@string/item_bookmark"
        android:visible="true"/>
    <item
        android:id="@+id/item_snippet"
        app:showAsAction="ifRoom|withText"
        android:title="@string/item_snippet"
        android:visible="true"/>
    <item
        android:id="@+id/item_delete"
        app:showAsAction="ifRoom|withText"
        android:title="@string/item_delete"
        android:visible="true"/>


</menu>