<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:elevation="@dimen/appbar_elevation"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:title="@string/untitled_holder"
            app:expandedTitleMarginStart="16dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <com.feedme.app.CustomAspectImage
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:scaleType="centerCrop"
                android:id="@+id/photo"
                android:contentDescription="@string/article_img_description" />
               <!-- android:transitionName="@string/article_img_transition"-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/article_title_bg"/>
            </FrameLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/meta_data_bg"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:id="@+id/byLine"
            android:textColor="@android:color/white"
            android:textSize="@dimen/detail_subtitle_text_size"
            android:background="@color/colorPrimary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/by_unknown"
            android:ellipsize="end"
            android:maxLines="1"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:contentPadding="16dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:text="@string/not_available"
                android:id="@+id/article_body"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="30"

                />
        </androidx.cardview.widget.CardView>
            <ImageView
                android:id="@+id/error_img"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:src="@drawable/document_error_flat"
                android:layout_height="wrap_content"
                android:contentDescription="@string/error_loading_article_Img" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:max="500"
        android:progress="0"
        android:progressDrawable="@drawable/circular" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/share_fab"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_share"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        android:contentDescription="@string/action_share"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
