<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/dialog_elevation"
    >

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/meta_data_bg"
            android:background="@color/colorPrimary"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">
                <com.example.bethechange.feedme.CustomAspectImage
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:id="@+id/photo"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="@drawable/article_title_bg"/>

                <TextView
                    android:id="@+id/title_dialog_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/untitled_holder"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/detail_title_text_size" />
            </FrameLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/byLine"
                android:textColor="@android:color/white"
                android:textSize="@dimen/detail_subtitle_text_size"
                android:gravity="center"
                android:text="@string/unknown_holder"
                android:ellipsize="end"
                android:maxLines="1"
                />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="8dp"
                app:contentPadding="16dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:id="@+id/article_body"
                    android:textSize="18sp"
                    android:ellipsize="end"
                    android:maxLines="30"
                    android:textColor="@color/primary_text"
                    />
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/share_fab"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:elevation="@dimen/fab_elevation"
        android:src="@drawable/ic_share"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/action_share"
        />
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/close_fab"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_close_white_24dp"
        android:layout_gravity="top|end"
        android:contentDescription="@string/action_close_dialog"
        />

</android.support.design.widget.CoordinatorLayout>
